--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "travel-list",
   "version": "0.1.0",
-  "homepage": "blackdreamer15.github.io/Travel-List",
+  "homepage": "https://blackdreamer15.github.io/Travel-List",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
